# gator

./: .coveragerc  .flake8  .gitignore  404.html  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  docker-compose.yaml  mkdocs.yml  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg  testpad.py  versions.json
.github/workflows/: main.yml  python-publish.yml
dev/: 404.html  index.html  sitemap.xml
docker/: devbox.dockerfile  run_tests.sh
docs/: index.md
gator/: __main__.py  configuration.py  constants.py  exceptions.py  post_process.py  pre_process.py
gator/gitutil/: helpers.py
gator/resources/: __init__.py  build.py  changeset.py  models.py  regex_filter.py  util.py
gator/resources/code_changes/: __init__.py  new_file.py  regex_replace.py  remove_file.py
gator/resources/filters/: regex_filter.py
latest/: index.html  sitemap.xml
tests/: sample_data.py  test_configuration.py  test_main.py  util.py
tests/gitutil/: test_helpers.py
tests/resources/: test_build.py  test_regex_filter.py  test_util.py
tests/resources/code_changes/: README.md  test_code_change.py
tests/resources/code_changes/code_change_test_data/new_file_v1_alpha__file_and_dir_dne__file_and_dir_created/: code_change.yaml
tests/resources/code_changes/code_change_test_data/new_file_v1_alpha__file_exists__file_not_modified/: code_change.yaml
tests/resources/code_changes/code_change_test_data/new_file_v1_alpha__multiple_new_files_specified__new_files_created/: code_change.yaml
tests/resources/filters/: test_regex_filter.py
(+15 files in other folders)
