[metadata]
name = gator
url = https://github.com/wayfair-incubator/gator
author = Jack Pierce
author_email = jackhpierce@gmail.com
version = 0.0.1
description = Change Propagator
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]

python_requires = >=3.6
install_requires =
    GitPython>=3.1,<3.2
packages = find:

[options.packages.find]
exclude = "*.tests", "*.tests.*", "tests.*", "tests"
